Klipper: Mark sync selection consistently

Previously, the flag was not applied consistently, which was breaking
for example LibreOffice Calc when copying between sheets.

To fix this, only the change to systemclipboard.cpp is needed,
the change to hisotrymodel.cpp is just for correctness sake.
There, the code only fires when "Keep the selection and clipboard the same"
is checked, the reason for clipboard update is always SyncSelection,
so we should pass it on.

BUG: 505209

FIXED-IN: 6.8.0